# FireflyDumper

./: .gitignore  README.md
FireflyDumper/: CMakeLists.txt  entry.c  entry.h  library.c
FireflyDumper/api/: il2cpp_api_functions.c  il2cpp_api_functions.h
FireflyDumper/dumper/: assembly.c  assembly.h  class.c  class.h  domain.c  domain.h  fields.c  fields.h  methods.c  methods.h
FireflyDumper/utils/: logger.c  logger.h  mem.c  mem.h  utils.c  utils.h
